# cascadeward

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.d2
examples/: README.md  make_demo_trace.py
src/cascadeward/: __init__.py  _claims.py  events.py  score.py
src/cascadeward/cli/: __init__.py
src/cascadeward/criticality/: __init__.py  branching.py  identifiability.py  verdict.py
src/cascadeward/forecast/: __init__.py  headroom.py
src/cascadeward/ingest/: __init__.py  base.py  jsonl.py  synthetic.py  vllm_log.py
src/cascadeward/pp/: __init__.py  background.py  bootstrap.py  decluster.py  kernels.py  likelihood.py  mle.py
src/cascadeward/report/: __init__.py  json_report.py  plots.py  text.py
tests/: test_claims.py  test_cli.py  test_events.py  test_identifiability.py  test_ingest.py  test_real_trace.py  test_ship_gate.py
